force-app/main/default/objects/Environment_Setting__mdt/fields/ARD_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ARD_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARD Enabled</label>
    <type>Checkbox</type>
</CustomField>