force-app/main/default/objects/Environment_Setting__mdt/fields/ARD_Url__c.field-meta.xml
<CustomField>
    <fullName>ARD_Url__c</fullName>
    <label>ARD Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>