force-app/main/default/objects/Environment_Setting__mdt/fields/Environment_SF_URL__c.field-meta.xml
<CustomField>
    <fullName>Environment_SF_URL__c</fullName>
    <label>Environment SF URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>