force-app/main/default/objects/Environment_Setting__mdt/fields/Genesys_Flow_Id__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Flow_Id__c</fullName>
    <label>Genesys Flow Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>