force-app/main/default/objects/Environment_Setting__mdt/fields/Genesys_Wrap_Up_URL__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Wrap_Up_URL__c</fullName>
    <description>AWS Lambda URL that sends wrap-up code to Genesys</description>
    <inlineHelpText>AWS Lambda URL that sends wrap-up code to Genesys</inlineHelpText>
    <label>Genesys Wrap Up URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>