force-app/main/default/objects/Environment_Setting__mdt/fields/Voice_Survey_Target__c.field-meta.xml
<CustomField>
    <fullName>Voice_Survey_Target__c</fullName>
    <description>The target Genesys Id for post survey</description>
    <inlineHelpText>The target Genesys Id for post survey</inlineHelpText>
    <label>Voice Survey Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>