force-app/main/default/objects/Environment_Setting__mdt/listViews/All_Environment_Settings.listView-meta.xml
<ListView>
    <fullName>All_Environment_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>Org_Id__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>ARD_Enabled__c</columns>
    <columns>ARD_Url__c</columns>
    <columns>Environment_SF_URL__c</columns>
    <columns>Genesys_Wrap_Up_URL__c</columns>
    <columns>Genesys_Flow_Id__c</columns>
    <columns>Voice_Survey_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Environment Settings</label>
    <language>en_US</language>
</ListView>